Call interceptor, command name annotation vocabulary listing